Updated the RealProblem and PolicyProblem models, controller and  views, #281

--- a/app/views/policy_problems/edit.html.erb
+++ b/app/views/policy_problems/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @policy_problem %> |
-<%= link_to 'Back', policy_problems_path %>
+<%= link_to 'Show', [@real_problem, @policy_problem] %> |
+<%= link_to 'Back', real_problem_path(@real_problem) %>
