--- a/app/views/policy_problems/index.html.erb
+++ b/app/views/policy_problems/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing policy_problems</h1>
+<h2><%= link_to @real_problem.title, real_problem_path(@real_problem) %></h2>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Real problem</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,9 @@
       <tr>
         <td><%= policy_problem.title %></td>
         <td><%= policy_problem.description %></td>
-        <td><%= policy_problem.real_problem %></td>
-        <td><%= link_to 'Show', policy_problem %></td>
-        <td><%= link_to 'Edit', edit_policy_problem_path(policy_problem) %></td>
-        <td><%= link_to 'Destroy', policy_problem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', real_problem_policy_problem_path(@real_problem, policy_problem) %></td>
+        <td><%= link_to 'Edit', edit_real_problem_policy_problem_path(@real_problem, policy_problem) %></td>
+        <td><%= link_to 'Destroy', real_problem_policy_problem_path(@real_problem, policy_problem), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Policy problem', new_policy_problem_path %>
+<%= link_to 'New Policy problem', new_real_problem_policy_problem_path(@real_problem) %>
