--- a/app/views/policy_problems/show.html.erb
+++ b/app/views/policy_problems/show.html.erb
@@ -12,8 +12,8 @@
 
 <p>
   <strong>Real problem:</strong>
-  <%= @policy_problem.real_problem %>
+  <%= link_to @policy_problem.real_problem.title, real_problem_path(@real_problem) %>
 </p>
 
-<%= link_to 'Edit', edit_policy_problem_path(@policy_problem) %> |
-<%= link_to 'Back', policy_problems_path %>
+<%= link_to 'Edit', edit_real_problem_policy_problem_path(params[:real_problem_id], @policy_problem) %> |
+<%= link_to 'Back', real_problem_path(@real_problem) %>
