--- a/app/views/policy_problems/_form.html.erb
+++ b/app/views/policy_problems/_form.html.erb
@@ -1,10 +1,10 @@
-<%= simple_form_for(@policy_problem) do |f| %>
+<%= simple_form_for [@real_problem, @policy_problem] do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.association :real_problem %>
+    <%#= f.association :real_problem %>
   </div>
 
   <div class="form-actions">
