--- a/app/views/steps/project_index.html.erb
+++ b/app/views/steps/project_index.html.erb
@@ -7,7 +7,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-check-circle"></i> Stage 1: Articulate problems and policy solutions</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse in" id="stage1">
+	  	<div class="collapse steps in" id="stage1">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -40,7 +40,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 2: Articulate and prioritize objectives</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage2">
+	  	<div class="collapse steps" id="stage2">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -69,7 +69,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage3" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 3. Map the context</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage3">
+	  	<div class="collapse steps" id="stage3">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -102,7 +102,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage4" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 4. Define your interim outcomes</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage4">
+	  	<div class="collapse steps" id="stage4">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -127,7 +127,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage5" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 5. Develop your plan of action</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage5">
+	  	<div class="collapse steps" id="stage5">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -152,7 +152,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage6" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 6. Develop your messages</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage6">
+	  	<div class="collapse steps" id="stage6">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
@@ -177,7 +177,7 @@
 	  	<div class="panel-heading">
 	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage7" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 7. Define your M&E and KM system and tools</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse" id="stage7">
+	  	<div class="collapse steps" id="stage7">
 	  		<table class="table table-bordered">
 	  			<thead>
 		          <tr>
