width10% th status

--- a/app/views/steps/project_index.html.erb
+++ b/app/views/steps/project_index.html.erb
@@ -12,7 +12,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -45,7 +45,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -74,7 +74,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -107,7 +107,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -132,7 +132,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -157,7 +157,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
@@ -182,7 +182,7 @@
 	  			<thead>
 		          <tr>
 		            <th>Step</th>
-		            <th class="text-center">Status</th>
+		            <th class="text-center status">Status</th>
 		          </tr>
 		        </thead>
 		        <tbody>
