--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1100,6 +1100,9 @@ div.well ol {
 .collapse.steps .table {
   margin-bottom: 0px;
 }
+.collapse.steps .table .status {
+  width: 10%;
+}
 h4.panel-title a .fa-check-circle {
   color: #3c763d;
 }
