--- a/app/views/policy_problems/show.html.erb
+++ b/app/views/policy_problems/show.html.erb
@@ -15,5 +15,32 @@
   <%= link_to @policy_problem.real_problem.title, real_problem_path(@real_problem) %>
 </p>
 
+<p>
+  <strong>Policy Solutions:</strong>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @policy_problem.policy_solutions.each do |policy_solution| %>
+      <tr>
+        <td><%= policy_solution.title %></td>
+        <td><%= policy_solution.description %></td>
+        <td><%= link_to 'Show', [@real_problem, @policy_problem, policy_solution] %></td>
+        <td><%= link_to 'Edit', edit_real_problem_policy_problem_policy_solution_path(@real_problem, @policy_problem, policy_solution) %></td>
+        <td><%= link_to 'Destroy', [@real_problem, @policy_problem, policy_solution], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to 'New Policy solution', new_real_problem_policy_problem_policy_solution_path(@real_problem, @policy_problem) %>
+
+</p>
+
 <%= link_to 'Edit', edit_real_problem_policy_problem_path(params[:real_problem_id], @policy_problem) %> |
 <%= link_to 'Back', real_problem_path(@real_problem) %>
