--- a/app/views/policy_solutions/_form.html.erb
+++ b/app/views/policy_solutions/_form.html.erb
@@ -1,10 +1,9 @@
-<%= simple_form_for(@policy_solution) do |f| %>
+<%= simple_form_for [@real_problem, @policy_problem, @policy_solution] do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.association :policy_problem %>
   </div>
 
   <div class="form-actions">
