--- a/app/views/policy_solutions/new.html.erb
+++ b/app/views/policy_solutions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', policy_solutions_path %>
+<%= link_to 'Back', real_problem_policy_problem_path(@real_problem, @policy_problem) %>
