--- a/app/views/policy_solutions/show.html.erb
+++ b/app/views/policy_solutions/show.html.erb
@@ -12,8 +12,8 @@
 
 <p>
   <strong>Policy problem:</strong>
-  <%= @policy_solution.policy_problem %>
+  <%= link_to @policy_problem.title, real_problem_policy_problem_path(@real_problem, @policy_problem) %>
 </p>
 
-<%= link_to 'Edit', edit_policy_solution_path(@policy_solution) %> |
-<%= link_to 'Back', policy_solutions_path %>
+<%= link_to 'Back', real_problem_policy_problem_path(@real_problem, @policy_problem) %> |
+<%= link_to 'Edit', edit_real_problem_policy_problem_policy_solution_path(@real_problem, @policy_problem, @policy_solution) %>
