--- a/app/views/steps/step1.html.erb
+++ b/app/views/steps/step1.html.erb
@@ -145,26 +145,38 @@ $('#myTab a').click(function (e) {
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="policy-dimensions">Policy Dimensions</label>
-                                                <input type="text" class="form-control" required="required" id="policy-dimensions" placeholder="Enter policy dimensions">
+                                                <textarea class="form-control" rows="3" id="policy-dimensions" placeholder="Enter Policy Dimensions"></textarea>
                                             </div>
                                             <button class="btn btn-default" type="button" ><i class="fa fa-plus-square-o"></i> Add Policy Dimensions</button>
                                             <hr>
                                             <table class="table table-bordered">
                                               <thead>
                                                 <tr>
-                                                  <th>Policy Problem</th>
+                                                  <th>Policy Dimensions</th>
                                                   <th>Actions</th>
                                                 </tr>
                                               </thead>
                                               <tbody>
                                                 <tr>
-                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td>Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</td>
                                                   <td class="text-right actions">
                                                         <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
                                                   </td>
                                                 </tr>
                                                 <tr>
-                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td>Health insurance law does not cover informal workers and many women at risk belong to this group. (Therefore, due to limited capacity to cover out-of-pocket expenditures women with little resources do not attend clinics for HIV testing and treatment)</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it.</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Current legal framework stipulates detention for sex workers (after 3 monetary sanctions), which prevents sex workers to attend health services due to fear of being denounced.</td>
                                                   <td class="text-right actions">
                                                         <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
                                                   </td>
@@ -231,18 +243,35 @@ $('#myTab a').click(function (e) {
                                               <thead>
                                                 <tr>
                                                   <th>Policy Solution</th>
+                                                  <th>Policy Dimensions</th>
                                                   <th>Actions</th>
                                                 </tr>
                                               </thead>
                                               <tbody>
                                                 <tr>
-                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers.</td>
+                                                  <td>Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</td>
                                                   <td class="text-right actions">
                                                         <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
                                                   </td>
                                                 </tr>
                                                 <tr>
-                                                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
+                                                  <td>Revision of the National HIV Strategy</td>
+                                                  <td>Health insurance law does not cover informal workers and many women at risk belong to this group. (Therefore, due to limited capacity to cover out-of-pocket expenditures women with little resources do not attend clinics for HIV testing and treatment)</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Health Insurance policy framework revised to cover disadvantaged informal workers.</td>
+                                                  <td>PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it.</td>
+                                                  <td class="text-right actions">
+                                                        <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                                                  </td>
+                                                </tr>
+                                                <tr>
+                                                  <td>Increase donor funding on PMTCT</td>
+                                                  <td>Current legal framework stipulates detention for sex workers (after 3 monetary sanctions), which prevents sex workers to attend health services due to fear of being denounced.</td>
                                                   <td class="text-right actions">
                                                         <a href="#"><i class="fa fa-edit" title="Edit"></i></a>      <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
                                                   </td>
