separación de steps en diferentes págs
steps/step1_1
steps/step1_2
steps/step1_3

--- a/app/views/steps/step1.html.erb
+++ b/app/views/steps/step1.html.erb
@@ -279,7 +279,7 @@ $('#myTab a').click(function (e) {
                                               </tbody>
                                             </table>
                                             <button class="btn btn-success" type="button" >Save</button> 
-                                            <button class="btn btn-success nextBtn" type="button" >Save & Next</button>
+                                            <button class="btn btn-success nextBtn" type="button" >Save & Finish</button>
                                         </div>
                                         <div class="col-md-6">
 
