--- a/app/views/solutions/_form.html.erb
+++ b/app/views/solutions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@real_problem, @policy_problem, @policy_solution] do |f| %>
+<%= simple_form_for [@real_problem, @policy_problem, @solution] do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
