--- a/app/views/solutions/show.html.erb
+++ b/app/views/solutions/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @policy_solution.title %>
+  <%= @solution.title %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @policy_solution.description %>
+  <%= @solution.description %>
 </p>
 
 <p>
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Back', real_problem_policy_problem_path(@real_problem, @policy_problem) %> |
-<%= link_to 'Edit', edit_real_problem_policy_problem_policy_solution_path(@real_problem, @policy_problem, @policy_solution) %>
+<%= link_to 'Edit', edit_real_problem_policy_problem_solution_path(@real_problem, @policy_problem, @solution) %>
