--- a/app/views/steps/_step_03.html.erb
+++ b/app/views/steps/_step_03.html.erb
@@ -66,19 +66,19 @@
                                                                         "policy_problems": [
                                                                             {
                                                                                 "title": "a policy problem 01",
-                                                                                "policy_solutions": []
+                                                                                "solutions": []
                                                                             },
                                                                             {
                                                                                 "title": "a policy problem 02",
-                                                                                "policy_solutions": []
+                                                                                "solutions": []
                                                                             },
                                                                             {
                                                                                 "title": "a policy problem 03",
-                                                                                "policy_solutions": []
+                                                                                "solutions": []
                                                                             },
                                                                             {
                                                                                 "title": "a policy problem 04",
-                                                                                "policy_solutions": []
+                                                                                "solutions": []
                                                                             }
                                                                         ]
                                                                     }
