margin-top date inspector

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -884,6 +884,7 @@ footer img {
 div.inspector div {
   margin-left: 20px;
   padding-left: 0px;
+  margin-top: 60px;
 }
 .inspector .field {
   margin-left: 0px;
