Added prioritized field to objective

--- a/app/views/objectives/show.html.erb
+++ b/app/views/objectives/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Prioritized:</strong>
+  <%= @objective.prioritized %>
+</p>
+
+<p>
   <strong>Solutions:</strong>
   <ul>
     <% @objective.solutions.each do |solution| %>
