Added Ask model, #286

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -19,5 +19,25 @@
   </ul>
 </p>
 
+<p>
+  <strong>Asks:</strong>
+  <table>
+    <thead>
+      <th>Title</th>
+    </thead>
+    <tbody>
+      <% @activity.asks.each do |ask| %>
+        <tr>
+          <td><%= ask.title %></td>
+          <td><%= link_to "Show", [@activity, ask] %></td>
+          <td><%= link_to "Edit", edit_activity_ask_path(@activity, ask) %></td>
+          <td><%= link_to "Delete", [@activity, ask], method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= link_to "New Ask", new_activity_ask_path(@activity) %>
+</p>
+
 <%= link_to 'Edit', edit_activity_path(@activity) %> |
 <%= link_to 'Back', activities_path %>
