--- a/app/views/steps/step1_1.html.erb
+++ b/app/views/steps/step1_1.html.erb
@@ -1,15 +1,15 @@
 <div class="stepwizard">
     <div class="stepwizard-row setup-panel">
         <div class="stepwizard-step">
-            <a href="#step-1" type="button" class="btn btn-circle btn-default btn-primary">1</a>
+            <a href="<%= step_path(:step1_1, rp_id: params[:rp_id]) %>" type="button" class="btn btn-circle btn-default btn-primary">1</a>
             <p>Step 1 - Real world problem</p>
         </div>
         <div class="stepwizard-step">
-            <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
+            <a href="<%= step_path(:step1_2) %>" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
             <p>Step 2 - Policy dimensions</p>
         </div>
         <div class="stepwizard-step">
-            <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
+            <a href="<%= step_path(:step1_3) %>" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
             <p>Step 3 - Policy solutions</p>
         </div>
     </div>
@@ -35,7 +35,8 @@
                     </div>
                     <div role="tabpanel" class="tab-pane" id="data-entry">
                         <!-- form init -->
-                        <%= form_for(@real_problem, html: {autocomplete: "off"}, url: create_ww_real_problem_path, method: :create_ww) do |f| %>
+                        <% action_path = @real_problem.new_record? ? create_ww_real_problems_path : update_ww_real_problems_path %>
+                        <%= form_for(@real_problem, html: {autocomplete: "off"}, url: action_path) do |f| %>
                         <div class="form-group">
                             <%= f.label :title %>:
                             <%= f.text_field :title, class: "form-control", placeholder: "Enter a problem", required: "required" %>
