--- a/app/views/steps/step1_3.html.erb
+++ b/app/views/steps/step1_3.html.erb
@@ -1,15 +1,15 @@
 <div class="stepwizard">
     <div class="stepwizard-row setup-panel">
         <div class="stepwizard-step">
-            <a href="step1_1" type="button" class="btn btn-circle btn-default">1</a>
+            <a href="<%= step_path(:step1_1) %>" type="button" class="btn btn-circle btn-default">1</a>
             <p>Step 1 - Real world problem</p>
         </div>
         <div class="stepwizard-step">
-            <a href="step1_2" type="button" class="btn btn-default btn-circle">2</a>
+            <a href="<%= step_path(:step1_2) %>" type="button" class="btn btn-default btn-circle">2</a>
             <p>Step 2 - Policy dimensions</p>
         </div>
         <div class="stepwizard-step">
-            <a href="step1_3" type="button" class="btn btn-default btn-circle btn-primary">3</a>
+            <a href="<%= step_path(:step1_3) %>" type="button" class="btn btn-default btn-circle btn-primary">3</a>
             <p>Step 3 - Policy solutions</p>
         </div>
     </div>
