--- a/app/views/steps/step6.html.erb
+++ b/app/views/steps/step6.html.erb
@@ -13,12 +13,56 @@ $('#myTab a').click(function (e) {
 <div class="tab-content">
   <div role="tabpanel" class="tab-pane active" id="explication">
     <h4>Description</h4>
-    <p>To keep relevant and ensure the best use of the resources available, the advocacy strategies have to evolve in response to changes circumstances and conditions. Furthermore we learn by doing and we may need to adjust our plan based on what we have learned during the implementation.</p>
-    <p>Your team should agree on mechanisms to revisit periodically the strategy. Your discussions should cover both internal and external elements. Some examples of guiding questions are as follows: Internal (What worked well and what did not work? Why? What could be improved? What lessons are drawn for the next time?. External: Has there been any important change in the context?; are there new opportunities/threats? And how are we going to react to them?; Is there any new critical player?; has there been any change in the target audience´s position/interest?,etc.</p>
+    <p>In stage 3, you identified those who bring about the change you aim to and the people that can influence them. This stage includes the definition of the messages that will be delivered to them.  Having a broad range of solid messages ready to be used is necessary for your advocacy efforts. You can then transmit them in a number of formats (lobby meetings, letters, interviews in the media, etc.</p>
+    <p>The UNICEF (2010) Advocacy Toolkit (pg. 45) identifies two types of messages: </p>
+    <ul>
+      <li>Primary message: the most universally compelling statement to all audiences. It usually combines: Statement + evidence + example + goal+ policy change you want (see pg. 45 for a description of each element)</li>
+      <li>Secondary message: a message that is tailored for a particular target audience. It provides further explanation or is used when a particular audience needs a primary message to be reinforced. Secondary messages often explain how the objectives of the primary message will be met, including the actions that should be taken by the audience addressed (asks). </li>
+    </ul>
+    <p>Communication specialists will craft powerful messages based using the information obtained in the previous stages, the “asks” that you will define at this stage and other relevant information such as the motivation of the audience or the communication channel.</p> 
+    <p>You should define “ask” for all the main decision-makers and influencers. They should be clear, concise, solution-focused and tailored for the target audience.</p>
     <hr>
     <h4>Example</h4>
-    <p><strong>Minister of Health</strong></p>
-    <p>To support the review of the policy framework on HI and recommend extension of coverage for informal workers in the report submitted to the NA by the Government</p>
+    <table class="table table-bordered">
+      <tr>
+        <th>Target audience</th>
+        <th>Ask</th>
+      </tr>
+      <tr>
+        <td>Minister of Health</td>
+        <td>To support the review of the policy framework on HI and recommend extension of coverage for informal workers in the report submitted to the NA by the Government</td>
+      </tr>
+      <tr>
+        <td>Members of Parliament</td>
+        <td>To support the review of the policy framework on HI and recommend extension of coverage for informal workers in the report on the 5 year review of the Law<br>
+        To invite UNICEF or partners to prepare and deliver report on the issue
+        </td>
+      </tr>
+      <tr>
+        <td>Director of the Department</td>
+        <td>To publicly advocate for the issue. </td>
+      </tr>
+      <tr>
+        <td>INGO “X”</td>
+        <td>To join forces with the UN to use the 5-year review of the Law on HI to advocate for the expansion of the HI coverage to informal workers and their families. </td>
+      </tr>
+      <tr>
+        <td>UN Agencies</td>
+        <td>To join forces within UN to use the 5-year review of the Law on HI to advocate for the expansion of the HI coverage to informal workers and their families. </td>
+      </tr>
+      <tr>
+        <td>Neutral media</td>
+        <td>To give voice to informal workers who relate their stories regarding the (lack of) access to expensive health services<br>
+        To join UN and INGO “X” in a field visit with the option of producing a documentary with the participation of …
+        </td>
+      </tr>
+      <tr>
+        <td>Affected groups of people</td>
+        <td>To tell their stories to decision makers and the media<br>
+        To build their communication skills and knowledge on the issue (offering to participate in workshops to be organized by UN and INGO “X”)
+        </td>
+      </tr>
+    </table>
   </div>
   <div role="tabpanel" class="tab-pane" id="data-entry">
     <div class="row">
