--- a/app/views/steps/step2.html.erb
+++ b/app/views/steps/step2.html.erb
@@ -7,11 +7,11 @@ $('#myTab a').click(function (e) {
 <h3>Formulate your policy solutions as objectives and prioritize</h3>
 <p>Defining and agreeing on your prioritized advocacy change objectives (desirable situations to be achieved)</p>
 <ul class="nav nav-tabs" role="tablist">
-  <li role="presentation" class="active"><a href="#explication" aria-controls="home" role="tab" data-toggle="tab">Explication</a></li>
-  <li role="presentation"><a href="#data-entry" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
+  <li role="presentation"><a href="#explication" aria-controls="home" role="tab" data-toggle="tab">Explication</a></li>
+  <li role="presentation" class="active"><a href="#data-entry" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
 </ul>
 <div class="tab-content">
-  <div role="tabpanel" class="tab-pane active" id="explication">
+  <div role="tabpanel" class="tab-pane" id="explication">
     <h4>Description</h4>
     <p>The policy solution that you identified in section above should be formulated as a goal. The advocacy goals are what the organization hopes to achieve in the long term, possible over several years, it is the overall policy change that is desired as a result of advocacy effort.</p>
     <p>The advocacy goals usually refer to:</p> 
@@ -31,42 +31,23 @@ $('#myTab a').click(function (e) {
     <h4>Example</h4>
     <p>By 2017 the Government approves a modification of Decree XX with an increase of 50% in social benefits for poor families</p>
   </div>
-  <div role="tabpanel" class="tab-pane" id="data-entry">
+  <div role="tabpanel" class="tab-pane active" id="data-entry">
     <div class="row">
       <div class="col-md-6">
-        <form>
-      	  <div class="form-group">
-            <label for="solution">Select Solution</label>
-            <select class="form-control" id="solution">
-              <option>Select Solution</option>
-              <option>Solution 1</option>
-              <option>Solution 2</option>
-              <option>Solution 3</option>
-              <option>Solution 4</option>
-              <option>Solution 5</option>
-            </select>
+        <p><%= flash[:notice]%></p>
+        <% form_url = @objective.new_record? ? create_ww_objectives_path : update_ww_objective_path(@objective) %>
+        <%= simple_form_for(@objective, url: form_url, wrapper: :vertical_input_group) do |f| %>
+          <%= f.error_notification %>
+            <%= f.association :solutions, as: :select, multiple: :multiple %>
+            <%= f.input :title, placeholder: "Objective Title" %>
+            <%= f.input :description, placeholder: "Objective Description" %>
+            <%= f.input :prioritized, input_html: { width: "0", heigth: "0" } %>
+          <div class="form-actions">
+            <%= f.button :button, class: "btn-default" do %>
+              <i class="fa fa-plus-square-o"></i> <%= @objective.new_record? ? 'Add Objective' : 'Edit Objective' %>
+            <% end %>
           </div>
-          <div class="form-group">
-            <label for="objetive">Objetive</label>
-            <textarea class="form-control" rows="3" id="objetive" placeholder="Write Objetive"></textarea>
-          </div>
-          <div class="form-group">
-      	    <label for="key-contribution">Key Contribution</label>
-      	    <input type="text" class="form-control" id="key-contribution" placeholder="Enter number 1 to 3">
-      	  </div>
-          <div class="form-group">
-            <label for="momentum">Momentum</label>
-            <input type="text" class="form-control" id="momentum" placeholder="Enter number 1 to 3">
-          </div>
-          <div class="form-group">
-            <label for="comparative-adventage">Comparative Adventage</label>
-            <input type="text" class="form-control" id="comparative-adventage" placeholder="Enter number 1 to 3">
-          </div>
-          <button class="btn btn-default" type="button" ><i class="fa fa-plus-square-o"></i> Add Objetive</button>
-          <hr>
-          <button class="btn btn-success" type="button">Save</button> 
-      	  <button class="btn btn-success" type="button">Save & Finish</button>
-    	 </form>
+        <% end %>
       </div>
       <div class="col-md-6">
         <h4>Solution 1</h4>
@@ -80,46 +61,19 @@ $('#myTab a').click(function (e) {
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
-              <td class="text-center">9</td>
-              <td class="text-center">
-                    <a href="#"><i class="fa fa-check-square" title="Priority"></i></a>
-              </td>
-              <td class="text-right actions">
-                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a> <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
-              </td>
-            </tr>
-            <tr>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
-              <td class="text-center">6</td>
-              <td class="text-center">
-                    <a href="#"><i class="fa fa-check-square" title="Priority"></i></a>
-              </td>
-              <td class="text-right actions">
-                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a> <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
-              </td>
-            </tr>
-            <tr>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
-              <td class="text-center">5</td>
-              <td class="text-center">
-                    <a href="#"><i class="fa fa-times" title="Postpone"></i></a>
-              </td>
-              <td class="text-right actions">
-                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a> <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
-              </td>
-            </tr>
-            <tr>
-              <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed metus ipsum, condimentum vitae varius non</td>
-              <td class="text-center">3</td>
-              <td class="text-center">
-                    <a href="#"><i class="fa fa-times" title="Postpone"></i></a>
-              </td>
-              <td class="text-right actions">
-                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a> <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
-              </td>
-            </tr>
+            <% @objectives.each do |objective| %>
+              <tr>
+                <td><%= objective.title %></td>
+                <td class="text-center">9</td>
+                <td class="text-center">
+                  <i class="<%= objective.prioritized? ? "fa fa-check-square" : "fa fa-times" %>" title="Priority"></i>
+                </td>
+                <td class="text-right actions">
+                      <a href="<%= step_path(:step2, objective_id: objective) %>"><i class="fa fa-edit" title="Edit"></i></a>
+                      <a data-confirm="Are you sure you want to permanently delete this Objective?" data-method="delete" href="<%= destroy_ww_objective_path(objective) %>" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
