--- a/app/views/steps/project_index.html.erb
+++ b/app/views/steps/project_index.html.erb
@@ -5,28 +5,22 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-check-circle"></i> Stage 1: Articulate problems and policy solutions</a></h4> 	
+	  		<h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-check-circle"></i> Stage 1: Articulate problems and policy solutions</a></h4> 	
 	  	</div>	  	
-	  	<div class="collapse steps in" id="stage1">
+	  	<div class="collapse steps" id="stage1">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td><a href="#">Step 1.1 Articulate the real-world problem children are facing that you want to address</a></td>
-		        		<td class="text-center"><i class="fa fa-unlock"></i> </td>
+		        	<tr title="Complete Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock"></i> </td>
+		        		<td><a href="#">Articulate the real-world problem children are facing that you want to address</a></td>
 		        	</tr>
-		        	<tr>
-		        		<td><a href="#">Step 1.2. Identify policy dimensions of the 'real-world' problem</a></td>
-		        		<td class="text-center"><i class="fa fa-unlock"></i></i></td>
+		        	<tr title="Complete Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock"></i> </td>
+		        		<td><a href="#">Identify policy dimensions of the 'real-world' problem</a></td>
 		        	</tr>
-		        	<tr>
-		        		<td>Step 1.3. Policy solutions: Describe the main policy solutions that would constitute an appropriate response</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="Complete Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock"></i></td>
+		        		<td><a href="#">Policy solutions: Describe the main policy solutions that would constitute an appropriate response</a></td>
 		        	</tr>
 		        </tbody>
 			</table>
@@ -38,24 +32,14 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 2: Articulate and prioritize objectives</a></h4> 	
+	  		<h4 class="panel-title" title="You must complete the previous stage"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 2: Articulate and prioritize objectives (Example)</a></h4> 	
 	  	</div>	  	
 	  	<div class="collapse steps" id="stage2">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td>Step 2.1 Formulate the policy solutions as objectives</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
-		        	</tr>
-		        	<tr>
-		        		<td>Step 2.2 Prioritize objectives based on (i) the difference they would make (ii) the momentum they have; and (iii) UNICEF's comparative advantage</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="You must complete the previous step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Add and prioritize objectives</td>
 		        	</tr>
 		        </tbody>
 			</table>
@@ -67,28 +51,62 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage3" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 3. Map the context</a></h4> 	
+	  		<h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage3" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-check-circle"></i> Stage 2: Articulate and prioritize objectives</a></h4> 	
 	  	</div>	  	
 	  	<div class="collapse steps" id="stage3">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td>3.1 Understand the institutional and decision-making cycles/Policy process</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="Complete Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock"></i></td>
+		        		<td><a href="#">Add and prioritize objectives</a></td>
 		        	</tr>
-		        	<tr>
-		        		<td>Step 3.2 Map the actors</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        </tbody>
+			</table>
+	  	</div>
+  	</div>
+  </div>
+</div>
+<hr>
+
+<h4>Stage 3: Set Goals</h4>
+
+<div class="row">
+  <div class="col-md-12">
+  	<div class="panel panel-default">
+	  	<div class="panel-heading">
+  			<table class="table_goals">
+  			<tr title="Stage Uninitiated or Incomplete">
+  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td><a data-toggle="collapse" href="#goal0" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the Government revises the National HIV Strategy and includes women at risk among targeted and PMTCT among critical strategies</a></td>
+  			</tr>
+  			</table> 
+	  	</div>	  	
+	  	<div class="collapse steps in" id="goal0">
+	  		<table class="table table-bordered">
+		        <tbody>
+		        	<tr title="Uninitiated Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
+		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
-		        	<tr>
-		        		<td>3.3 Identify (additional) enabling factors and barriers</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>List actors and power map</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Identify enabling factors and barriers</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define the interim outcomes and activities</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define theory of change</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
 			</table>
@@ -100,20 +118,39 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage4" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 4. Define your interim outcomes</a></h4> 	
+  			<table class="table_goals">
+  			<tr title="Stage Uninitiated or Incomplete">
+  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td><a data-toggle="collapse" href="#goal1" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the National Assembly/Government revises the Health Insurance policy framework to expand coverage to disadvantaged informal workers and their families and to include PMTCT in the benefit package</a></td>
+  			</tr>
+  			</table> 
 	  	</div>	  	
-	  	<div class="collapse steps" id="stage4">
+	  	<div class="collapse steps in" id="goal1">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td>4.1 Define your interim outcomes</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="Uninitiated Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
+		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>List actors and power map</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Identify enabling factors and barriers</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define the interim outcomes and activities</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define theory of change</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
 			</table>
@@ -125,20 +162,39 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage5" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 5. Develop your plan of action</a></h4> 	
+  			<table class="table_goals">
+  			<tr title="Stage Uninitiated or Incomplete">
+  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td><a data-toggle="collapse" href="#goal2" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, donors raise their external assistance to PMTCT</a></td>
+  			</tr>
+  			</table> 
 	  	</div>	  	
-	  	<div class="collapse steps" id="stage5">
+	  	<div class="collapse steps in" id="goal2">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td>5.1 Develop your plan of action</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="Uninitiated Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
+		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>List actors and power map</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Identify enabling factors and barriers</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define the interim outcomes and activities</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define theory of change</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
 			</table>
@@ -150,49 +206,39 @@
   <div class="col-md-12">
   	<div class="panel panel-default">
 	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage6" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 6. Develop your messages</a></h4> 	
+  			<table class="table_goals">
+  			<tr title="Stage Uninitiated or Incomplete">
+  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td><a data-toggle="collapse" href="#goal3" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the National Assembly amends the Penal Code to remove detention among the list of sanctions for sex workers</a></td>
+  			</tr>
+  			</table> 
 	  	</div>	  	
-	  	<div class="collapse steps" id="stage6">
+	  	<div class="collapse steps in" id="goal3">
 	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
 		        <tbody>
-		        	<tr>
-		        		<td>6.1 Develop your messages</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="Uninitiated Step">
+		        		<td class="text-center td-w-10p"><i class="fa fa-unlock-alt"></i></td>
+		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
-		        </tbody>
-			</table>
-	  	</div>
-  	</div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-  	<div class="panel panel-default">
-	  	<div class="panel-heading">
-	  		<h4 class="panel-title"><a data-toggle="collapse" href="#stage7" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-times-circle"></i> Stage 7. Define your M&E and KM system and tools</a></h4> 	
-	  	</div>	  	
-	  	<div class="collapse steps" id="stage7">
-	  		<table class="table table-bordered">
-	  			<thead>
-		          <tr>
-		            <th>Step</th>
-		            <th class="text-center status">Status</th>
-		          </tr>
-		        </thead>
-		        <tbody>
-		        	<tr>
-		        		<td>Step 7.1. Define your advocacy M&E plan</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>List actors and power map</td>
 		        	</tr>
-		        	<tr>
-		        		<td>Step 7.2 Decide how you will adjust our strategy as you learn more and how you will exchange knowledge internally and externally</td>
-		        		<td class="text-center"><i class="fa fa-lock"></i></td>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Identify enabling factors and barriers</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define the interim outcomes and activities</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Define theory of change</td>
+		        	</tr>
+		        	<tr title="You must complete the previous step">
+		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
 			</table>
