implementation step1_2 policy problems

--- a/app/views/steps/step1_2.html.erb
+++ b/app/views/steps/step1_2.html.erb
@@ -21,11 +21,11 @@
 		<div class="form-group">
 			<div role="tabpanel">
 				<ul class="nav nav-tabs" role="tablist">
-					<li role="presentation" class="active"><a href="#explication2" aria-controls="home" role="tab" data-toggle="tab">Explication</a></li>
-					<li role="presentation"><a href="#data-entry2" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
+					<li role="presentation"><a href="#explication2" aria-controls="home" role="tab" data-toggle="tab">Explanation</a></li>
+					<li role="presentation" class="active"><a href="#data-entry2" aria-controls="profile" role="tab" data-toggle="tab">Data Entry</a></li>
 				</ul>
 					<div class="tab-content">
-						<div role="tabpanel" class="tab-pane active" id="explication2">
+						<div role="tabpanel" class="tab-pane" id="explication2">
 							<h4>Description</h4>
 							<p>Behind those problems there are usually policy related causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships.</p>
 							<hr>
@@ -36,11 +36,12 @@
 								<li>Increasing percentage of families uncovered by unemployment subsidy and exclusively receiving a low "guaranteed minimum income" subsidy.</li>
 							</ul>
 						</div>
-						<div role="tabpanel" class="tab-pane" id="data-entry2">
+						<div role="tabpanel" class="tab-pane active" id="data-entry2">
 							<div class="row">
 								<div class="col-md-6">
 									<!-- form init -->
-									<%= form_for([@real_problem, PolicyProblem.new], html: {autocomplete: "off"}, url:  create_ww_real_problem_policy_problems_path(@real_problem) ) do |f| %>
+									<% form_url_action = params[:pp_id] ? update_ww_real_problem_policy_problem_path(@real_problem, @policy_problem) : create_ww_real_problem_policy_problems_path(@real_problem) %>
+									<%= form_for([@real_problem, @policy_problem], html: {autocomplete: "off"}, url: form_url_action ) do |f| %>
 										<div class="form-group">
 											<div class="form-group">
 												<%= f.label :title %>:
@@ -52,7 +53,7 @@
 												<%= f.text_area :description, class: "form-control", placeholder: "Enter an explanation" %>
 											</div>
 										</div>
-										<button class="btn btn-default" type="submit"><i class="fa fa-plus-square-o"></i> Add Policy Dimensions</button>
+										<button class="btn btn-default" type="submit"><i class="fa fa-plus-square-o"></i> <%= params[:pp_id] ? "Update" : "Add" %> Policy Dimensions</button>
 									<% end %>
 									<hr>
 									<table class="table table-bordered">
@@ -67,15 +68,14 @@
 										<tr>
 										  <td><%= pp.description %></td>
 										  <td class="text-right actions">
-												<a href="#"><i class="fa fa-edit" title="Edit"></i></a>      
-												<a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow"><i class="fa fa-trash" title="Delete"></i></a>
+												<%= link_to "Edit", wizard_path(:step1_2, rp_id: params[:rp_id], pp_id: pp.id) %>
+												<%= link_to "Delete", destroy_ww_real_problem_policy_problem_path(real_problem_id: @real_problem, id: pp.id), method: :delete  %>
 										  </td>
 										</tr>
 										<% end %>
 									  </tbody>
 									</table>
-									<button class="btn btn-success" type="button">Save</button> 
-									<button class="btn btn-success" type="button" onClick="parent.location='step1_3'">Save &amp; Next</button>
+									<%= link_to 'Siguiente', wizard_path(:step1_3, rp_id: params[:rp_id]) %>
 								</div>
 								<div class="col-md-6">
 
